file_unix: Fix endless loop during xattr copy.

If an attribute can not be read e.g. due to ENOTSUP,
skip the attribute instead of looping endlessly.

BUG: 441446